--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@nuxtjs/axios": "^5.0.0",
     "cookie-universal-nuxt": "^2.0.11",
     "cross-env": "^5.2.0",
+    "docuri": "^4.2.2",
     "express": "^4.16.3",
+    "http-proxy": "^1.17.0",
     "nuxt": "^2.0.0",
-    "pouchdb": "^7.0.0"
+    "pouchdb": "^7.0.0",
+    "pouchdb-find": "^7.0.0",
+    "pouchdb-upsert": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
