--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "btoa": "^1.2.1",
+    "cookie-parser": "^1.4.4",
     "cookie-universal-nuxt": "^2.0.11",
     "cross-env": "^5.2.0",
     "docuri": "^4.2.2",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
-    "http-proxy": "^1.17.0",
     "nuxt": "^2.0.0",
     "pouchdb": "^7.0.0",
     "pouchdb-find": "^7.0.0",
-    "pouchdb-upsert": "^2.2.0"
+    "pouchdb-upsert": "^2.2.0",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
-    "dotenv": "^6.2.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-loader": "^2.0.0",
