--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pouchdb-upsert": "^2.2.0",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "request-promise-native": "^1.0.7",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
