--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "bcrypt": "^3.0.4",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.4",
     "cookie-universal-nuxt": "^2.0.11",
@@ -30,7 +31,8 @@
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
