--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "sha1": "^1.1.1",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "smooth-scrollbar": "^8.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
