:wrench: login page cookie error

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,14 @@
 # DISABLE NUXT
 EXPRESS_ONLY=
 
-# WEBSITE
+# APP
 HOST=
 PORT=
+APP_NAME=
+APP_DESC=
+
+# AXIOS
+API_URL=
 
 # ONLINE COUCH SERVER
 COUCH_SERV=
