--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "axios-cookiejar-support": "^0.4.2",
     "bcrypt": "^3.0.4",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.4",
