--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "docuri": "^4.2.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
+    "express-http-proxy": "^1.5.1",
     "express-validator": "^5.3.1",
     "md5": "^2.2.1",
     "nuxt": "^2.0.0",
