--- a/sample.env
+++ b/sample.env
@@ -1,16 +1,16 @@
 # DISABLE NUXT
-EXPRESS_ONLY=
+EXPRESS_ONLY= # 0 = render nuxt.js || 1 = do not render nuxt
 
 # APP
-HOST=
-PORT=
-APP_NAME=
-APP_DESC=
+HOST= # 0.0.0.0 = localhost / local ip
+PORT= # default 3000
+APP_NAME= # head default title
+APP_DESC= # head default description
 
 # AXIOS
-API_URL=
+API_URL= # api endpoint
 
 # ONLINE COUCH SERVER
-COUCH_SERV=
-COUCH_USER=
-COUCH_PASS=
+COUCH_SERV= # couchdb url
+COUCH_USER= # admin account username
+COUCH_PASS= # admin account password
